@@ -1,4 +1,4 @@
 #maven.buildNumber.plugin properties file
-#Sat Jan 12 19:24:29 CET 2013
+#Sun Jan 13 10:29:31 CET 2013
 buildNumber=4
-buildNumber0=1495
+buildNumber0=1508
